# roman_photo_z

./: .gitignore  .gitmodules  LICENSE  README.md  env.sh  env.yaml  env.yml  environment.yaml  environment.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yaml  ci.yml  inactive.yml  stale.yml
py/: test.ipynb  test_paths.py
py/filt/: config
src/roman-photo-z/: Roman_effarea_20210614.csv  flux.py  main.py  test.ipynb  test.sed
src/roman-photo-z/data_files/FILTER/: RST_F087.res  RST_F106.res  RST_F129.res  RST_F146.res  RST_F184.res  RST_F213.res
src/roman_photo_z/: LLTF_calibration.ipynb  bpz.py  flux.py  io.py  main.py  model.py  model.txt  simulate.py  test.ipynb
src/roman_photo_z/data_files/AB/: El_B2004a.RST_F087.AB  El_B2004a.RST_F106.AB  El_B2004a.RST_F129.AB  El_B2004a.RST_F158.AB  El_B2004a.RST_F184.AB  El_B2004a.RST_F213.AB  Im_B2004a.RST_F184.AB  Im_B2004a.RST_F213.AB  SB2_B2004a.RST_F106.AB  SB2_B2004a.RST_F146.AB  SB2_B2004a.RST_F158.AB  SB3_B2004a.RST_F062.AB  SB3_B2004a.RST_F129.AB  SB3_B2004a.RST_F146.AB  SB3_B2004a.RST_F158.AB  SB3_B2004a.RST_F213.AB  Sbc_B2004a.RST_F106.AB  Sbc_B2004a.RST_F129.AB  Sbc_B2004a.RST_F158.AB  Sbc_B2004a.RST_F213.AB  Scd_B2004a.RST_F062.AB  Scd_B2004a.RST_F087.AB  Scd_B2004a.RST_F106.AB  Scd_B2004a.RST_F129.AB  ssp_25Myr_z008.RST_F087.AB  ssp_25Myr_z008.RST_F106.AB  ssp_25Myr_z008.RST_F129.AB  (+5 more)
src/rpz/: LLTF_calibration.ipynb  magnitue_data.npy  mcmc.py  model.npy  model.py  observed.npy  observed_error.npy  ratio.npy  test.ipynb
src/rpz/data_files/: CGI LLTF calibration.xlsx
(+35 files in other folders)
